<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="24dp"
    android:paddingBottom="24dp"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:typeface="serif"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:text="@string/about_title"
        android:paddingTop="10dp"
        android:paddingBottom="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:typeface="serif"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/about_design"
        android:paddingBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:typeface="serif"
        android:textColor="@color/dark"
        android:textStyle="bold"
        android:text="@string/about_designer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:typeface="serif"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/about_develop"
        android:paddingTop="20dp"
        android:paddingBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:typeface="serif"
        android:textColor="@color/dark"
        android:textStyle="bold"
        android:text="@string/about_developer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:typeface="serif"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/about_img_rkt_credit"
        android:paddingTop="20dp"
        android:paddingBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:typeface="serif"
        android:textColor="@color/dark"
        android:textStyle="bold"
        android:text="@string/about_img_rkt_credit_owner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:typeface="serif"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/about_img_credit"
        android:paddingTop="20dp"
        android:paddingBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:typeface="serif"
        android:textColor="@color/dark"
        android:textStyle="bold"
        android:text="@string/about_img_credit_owner"
        android:paddingBottom="16dp" />

</LinearLayout>